<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hand_4566532_1920"
    tools:context=".Registro">

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="38dp"
        android:layout_height="43dp"
        android:background="#00FFFFFF"
        android:onClick="volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/tv1pres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv1pres"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv2pres"
        android:layout_width="159dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/tv2pres"
        android:inputType="textPersonName"
        android:textColor="#6FFFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1pres" />

    <EditText
        android:id="@+id/tv3pres"
        android:layout_width="163dp"
        android:layout_height="36dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/tv3pres"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2pres" />

    <EditText
        android:id="@+id/tv4pres"
        android:layout_width="163dp"
        android:layout_height="39dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/tv4pres"
        android:inputType="phone"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv3pres" />

    <Button
        android:id="@+id/b_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:onClick="registrar"
        android:text="@string/b1pres"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_ini" />

    <Button
        android:id="@+id/b_ini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:onClick="inicio"
        android:text="@string/b2pres"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv4pres" />

    <Button
        android:id="@+id/b_bus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:onClick="buscar"
        android:text="@string/b3pres"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_reg" />

    <Button
        android:id="@+id/b_elim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:onClick="eliminar"
        android:text="@string/b4pres"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_bus" />

    <Button
        android:id="@+id/b_mod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:onClick="modificar"
        android:text="@string/b5pres"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_elim" />

</androidx.constraintlayout.widget.ConstraintLayout>