<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hospital_3192832_1920"
    tools:context=".AcercaDe">

    <TextView
        android:id="@+id/textView"
        android:layout_width="161dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/tv1ad"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <Button
        android:id="@+id/b1ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:background="#00FFFFFF"
        android:onClick="inicio"
        android:text="@string/b1ad"
        android:textColor="#ECE7E7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2ad" />

    <TextView
        android:id="@+id/tv2ad"
        android:layout_width="284dp"
        android:layout_height="169dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:text="@string/tv2ad"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:onClick="atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />
</androidx.constraintlayout.widget.ConstraintLayout>